--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
 					<div class="carousel dark">
 						<div class="swiper">
 							<div class="swiper-wrapper">
-								<div class="swiper-slide">
-									<img src="img/game/game01.jpg">
+								<div class="swiper-slide" onclick="location='game-detail.html'">
+									<img src="img/game/game-thumb-01.jpg">
 									<div class="hover">
 										<h4>《決勝時刻®：現代戰爭® II 2022》</h4>
 										<ul class="tags">
@@ -167,8 +167,8 @@
 										<button class="btn-tertiary">View Details</button>
 									</div>
 								</div>
-								<div class="swiper-slide">
-									<img src="img/game/game02.jpg">
+								<div class="swiper-slide" onclick="location='game-detail.html'">
+									<img src="img/game/game-thumb-02.jpg">
 									<div class="hover">
 										<h4>《決勝時刻®：現代戰爭® II 2022》</h4>
 										<ul class="tags">
@@ -179,8 +179,8 @@
 										<button class="btn-tertiary">View Details</button>
 									</div>
 								</div>
-								<div class="swiper-slide">
-									<img src="img/game/game03.jpg">
+								<div class="swiper-slide" onclick="location='game-detail.html'">
+									<img src="img/game/game-thumb-03.jpg">
 									<div class="hover">
 										<h4>《決勝時刻®：現代戰爭® II 2022》</h4>
 										<ul class="tags">
@@ -191,8 +191,8 @@
 										<button class="btn-tertiary">View Details</button>
 									</div>
 								</div>
-								<div class="swiper-slide">
-									<img src="img/game/game04.jpg">
+								<div class="swiper-slide" onclick="location='game-detail.html'">
+									<img src="img/game/game-thumb-04.jpg">
 									<div class="hover">
 										<h4>《決勝時刻®：現代戰爭® II 2022》</h4>
 										<ul class="tags">
@@ -203,8 +203,8 @@
 										<button class="btn-tertiary">View Details</button>
 									</div>
 								</div>
-								<div class="swiper-slide">
-									<img src="img/game/game05.jpg">
+								<div class="swiper-slide" onclick="location='game-detail.html'">
+									<img src="img/game/game-thumb-05.jpg">
 									<div class="hover">
 										<h4>《決勝時刻®：現代戰爭® II 2022》</h4>
 										<ul class="tags">
@@ -215,8 +215,8 @@
 										<button class="btn-tertiary">View Details</button>
 									</div>
 								</div>
-								<div class="swiper-slide">
-									<img src="img/game/game06.jpg">
+								<div class="swiper-slide" onclick="location='game-detail.html'">
+									<img src="img/game/game-thumb-06.jpg">
 									<div class="hover">
 										<h4>《決勝時刻®：現代戰爭® II 2022》</h4>
 										<ul class="tags">
@@ -227,8 +227,8 @@
 										<button class="btn-tertiary">View Details</button>
 									</div>
 								</div>
-								<div class="swiper-slide">
-									<img src="img/game/game07.jpg">
+								<div class="swiper-slide" onclick="location='game-detail.html'">
+									<img src="img/game/game-thumb-07.jpg">
 									<div class="hover">
 										<h4>《決勝時刻®：現代戰爭® II 2022》</h4>
 										<ul class="tags">
@@ -239,8 +239,8 @@
 										<button class="btn-tertiary">View Details</button>
 									</div>
 								</div>
-								<div class="swiper-slide">
-									<img src="img/game/game08.jpg">
+								<div class="swiper-slide" onclick="location='game-detail.html'">
+									<img src="img/game/game-thumb-08.jpg">
 									<div class="hover">
 										<h4>《決勝時刻®：現代戰爭® II 2022》</h4>
 										<ul class="tags">
@@ -251,8 +251,8 @@
 										<button class="btn-tertiary">View Details</button>
 									</div>
 								</div>
-								<div class="swiper-slide">
-									<img src="img/game/game09.jpg">
+								<div class="swiper-slide" onclick="location='game-detail.html'">
+									<img src="img/game/game-thumb-09.jpg">
 									<div class="hover">
 										<h4>《決勝時刻®：現代戰爭® II 2022》</h4>
 										<ul class="tags">
@@ -263,8 +263,8 @@
 										<button class="btn-tertiary">View Details</button>
 									</div>
 								</div>
-								<div class="swiper-slide">
-									<img src="img/game/game10.jpg">
+								<div class="swiper-slide" onclick="location='game-detail.html'">
+									<img src="img/game/game-thumb-10.jpg">
 									<div class="hover">
 										<h4>《決勝時刻®：現代戰爭® II 2022》</h4>
 										<ul class="tags">
@@ -359,23 +359,23 @@
 					<div class="content">
 						<ul class="tab">
 							<li class="active">
-								<span>1</span>
+								<h5>1</h5>
 								<h4>Step 1</h4>
 							</li>
 							<li>
-								<span>2</span>
+								<h5>2</h5>
 								<h4>Step 2</h4>
 							</li>
 							<li>
-								<span>3</span>
+								<h5>3</h5>
 								<h4>Step 3</h4>
 							</li>
 							<li>
-								<span>4</span>
+								<h5>4</h5>
 								<h4>Step 4</h4>
 							</li>
 							<li>
-								<span>5</span>
+								<h5>5</h5>
 								<h4>Step 5</h4>
 							</li>
 						</ul>
