--- a/personal.html
+++ b/personal.html
@@ -282,108 +282,109 @@
                                     </thead>
                                     <tbody>
                                         <tr>
-                                            <td class="record-time">2020-03-03 23:55</td>
-                                            <td class="record-trackno">0xa4c99bd...1365</td>
-                                            <td class="record-price">100</td>
+                                            <td class="record-time"><span></span>2020-03-03 23:55</td>
+                                            <td class="record-trackno"><span></span>0xa4c99bd...1365</td>
+                                            <td class="record-price"><span></span>100</td>
                                             <td class="record-status"><span><i class="success">•</i>成功</span></td>
                                             <td class="record-view"><button class="btn-tertiary">查看</button></td>
                                         </tr>
                                         <tr>
-                                            <td class="record-time">2020-03-03 23:55</td>
-                                            <td class="record-trackno">TOR20221214361430000016</td>
-                                            <td class="record-price">300,000,000</td>
-                                            <td class="record-status"><span><i class="warning">•</i>進行中進行中進行中進行中</span>
+                                            <td class="record-time"><span></span>2020-03-03 23:55</td>
+                                            <td class="record-trackno"><span></span>TOR20221214361430000016</td>
+                                            <td class="record-price"><span></span>300,000,000</td>
+                                            <td class="record-status">
+                                                <span><i class="warning">•</i>Pemrosesan Pembelian</span>
                                             </td>
                                             <td class="record-view"><button class="btn-tertiary">查看</button></td>
                                         </tr>
                                         <tr>
-                                            <td class="record-time">2020-03-03 23:55</td>
-                                            <td class="record-trackno">TOR20221214361430000016</td>
-                                            <td class="record-price">300,000.123456</td>
+                                            <td class="record-time"><span></span>2020-03-03 23:55</td>
+                                            <td class="record-trackno"><span></span>TOR20221214361430000016</td>
+                                            <td class="record-price"><span></span>300,000.123456</td>
                                             <td class="record-status"><span><i class="error">•</i>失敗</span></td>
                                             <td class="record-view"><button class="btn-tertiary">查看</button></td>
                                         </tr>
                                         <tr>
-                                            <td class="record-time">2020-03-03 23:55</td>
-                                            <td class="record-trackno">TOR20221214361430000016</td>
-                                            <td class="record-price">300,000.123456</td>
+                                            <td class="record-time"><span></span>2020-03-03 23:55</td>
+                                            <td class="record-trackno"><span></span>TOR20221214361430000016</td>
+                                            <td class="record-price"><span></span>300,000.123456</td>
                                             <td class="record-status"><span><i class="success">•</i>成功</span></td>
                                             <td class="record-view"><button class="btn-tertiary">查看</button></td>
                                         </tr>
                                         <tr>
-                                            <td class="record-time">2020-03-03 23:55</td>
-                                            <td class="record-trackno">TOR20221214361430000016</td>
-                                            <td class="record-price">300,000.123456</td>
+                                            <td class="record-time"><span></span>2020-03-03 23:55</td>
+                                            <td class="record-trackno"><span></span>TOR20221214361430000016</td>
+                                            <td class="record-price"><span></span>300,000.123456</td>
                                             <td class="record-status"><span><i class="warning">•</i>進行中</span></td>
                                             <td class="record-view"><button class="btn-tertiary">查看</button></td>
                                         </tr>
                                         <tr>
-                                            <td class="record-time">2020-03-03 23:55</td>
-                                            <td class="record-trackno">TOR20221214361430000016</td>
-                                            <td class="record-price">300,000.123456</td>
+                                            <td class="record-time"><span></span>2020-03-03 23:55</td>
+                                            <td class="record-trackno"><span></span>TOR20221214361430000016</td>
+                                            <td class="record-price"><span></span>300,000.123456</td>
                                             <td class="record-status"><span><i class="success">•</i>成功</span></td>
                                             <td class="record-view"><button class="btn-tertiary">查看</button></td>
                                         </tr>
                                         <tr>
-                                            <td class="record-time">2020-03-03 23:55</td>
-                                            <td class="record-trackno">TOR20221214361430000016</td>
-                                            <td class="record-price">300,000.123456</td>
+                                            <td class="record-time"><span></span>2020-03-03 23:55</td>
+                                            <td class="record-trackno"><span></span>TOR20221214361430000016</td>
+                                            <td class="record-price"><span></span>300,000.123456</td>
                                             <td class="record-status"><span><i class="success">•</i>成功</span></td>
                                             <td class="record-view"><button class="btn-tertiary">查看</button></td>
                                         </tr>
                                         <tr>
-                                            <td class="record-time">2020-03-03 23:55</td>
-                                            <td class="record-trackno">TOR20221214361430000016</td>
-                                            <td class="record-price">300,000 TWD</td>
+                                            <td class="record-time"><span></span>2020-03-03 23:55</td>
+                                            <td class="record-trackno"><span></span>TOR20221214361430000016</td>
+                                            <td class="record-price"><span></span>300,000 TWD</td>
                                             <td class="record-status"><span><i class="success">•</i>成功</span></td>
                                             <td class="record-view"><button class="btn-tertiary">查看</button></td>
                                         </tr>
                                         <tr>
-                                            <td class="record-time">2020-03-03 23:55</td>
-                                            <td class="record-trackno">TOR20221214361430000016</td>
-                                            <td class="record-price">300,000 TWD</td>
+                                            <td class="record-time"><span></span>2020-03-03 23:55</td>
+                                            <td class="record-trackno"><span></span>TOR20221214361430000016</td>
+                                            <td class="record-price"><span></span>300,000 TWD</td>
                                             <td class="record-status"><span><i class="success">•</i>成功</span></td>
                                             <td class="record-view"><button class="btn-tertiary">查看</button></td>
                                         </tr>
                                         <tr>
-                                            <td class="record-time">2020-03-03 23:55</td>
-                                            <td class="record-trackno">TOR20221214361430000016</td>
-                                            <td class="record-price">300,000.123456</td>
+                                            <td class="record-time"><span></span>2020-03-03 23:55</td>
+                                            <td class="record-trackno"><span></span>TOR20221214361430000016</td>
+                                            <td class="record-price"><span></span>300,000.123456</td>
                                             <td class="record-status"><span><i class="success">•</i>成功</span></td>
                                             <td class="record-view"><button class="btn-tertiary">查看</button></td>
                                         </tr>
                                         <tr>
-                                            <td class="record-time">2020-03-03 23:55</td>
-                                            <td class="record-trackno">TOR20221214361430000016</td>
-                                            <td class="record-price">300,000.123456</td>
+                                            <td class="record-time"><span></span>2020-03-03 23:55</td>
+                                            <td class="record-trackno"><span></span>TOR20221214361430000016</td>
+                                            <td class="record-price"><span></span>300,000.123456</td>
                                             <td class="record-status"><span><i class="success">•</i>成功</span></td>
                                             <td class="record-view"><button class="btn-tertiary">查看</button></td>
                                         </tr>
                                         <tr>
-                                            <td class="record-time">2020-03-03 23:55</td>
-                                            <td class="record-trackno">TOR20221214361430000016</td>
-                                            <td class="record-price">300,000.123456</td>
+                                            <td class="record-time"><span></span>2020-03-03 23:55</td>
+                                            <td class="record-trackno"><span></span>TOR20221214361430000016</td>
+                                            <td class="record-price"><span></span>300,000.123456</td>
                                             <td class="record-status"><span><i class="success">•</i>成功</span></td>
                                             <td class="record-view"><button class="btn-tertiary">查看</button></td>
                                         </tr>
                                         <tr>
-                                            <td class="record-time">2020-03-03 23:55</td>
-                                            <td class="record-trackno">TOR20221214361430000016</td>
-                                            <td class="record-price">300,000 TWD</td>
+                                            <td class="record-time"><span></span>2020-03-03 23:55</td>
+                                            <td class="record-trackno"><span></span>TOR20221214361430000016</td>
+                                            <td class="record-price"><span></span>300,000 TWD</td>
                                             <td class="record-status"><span><i class="success">•</i>成功</span></td>
                                             <td class="record-view"><button class="btn-tertiary">查看</button></td>
                                         </tr>
                                         <tr>
-                                            <td class="record-time">2020-03-03 23:55</td>
-                                            <td class="record-trackno">TOR20221214361430000016</td>
-                                            <td class="record-price">300,000 TWD</td>
+                                            <td class="record-time"><span></span>2020-03-03 23:55</td>
+                                            <td class="record-trackno"><span></span>TOR20221214361430000016</td>
+                                            <td class="record-price"><span></span>300,000 TWD</td>
                                             <td class="record-status"><span><i class="success">•</i>成功</span></td>
                                             <td class="record-view"><button class="btn-tertiary">查看</button></td>
                                         </tr>
                                         <tr>
-                                            <td class="record-time">2020-03-03 23:55</td>
-                                            <td class="record-trackno">TOR20221214361430000016</td>
-                                            <td class="record-price">300,000.123456</td>
+                                            <td class="record-time"><span></span>2020-03-03 23:55</td>
+                                            <td class="record-trackno"><span></span>TOR20221214361430000016</td>
+                                            <td class="record-price"><span></span>300,000.123456</td>
                                             <td class="record-status"><span><i class="success">•</i>成功</span></td>
                                             <td class="record-view"><button class="btn-tertiary">查看</button></td>
                                         </tr>
@@ -453,7 +454,7 @@
     <script src="js/tab.js"></script>
     <script src="js/popUp.js"></script>
     <script src="js/connect-wallet.js"></script>
-    <script src="js/progress.js"></script>
+    <script src="js/record.js"></script>
 
     <!-- Swiper 套件 -->
     <script src="vendor/swiper/swiper-bundle.min.js"></script>
